--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -144,11 +144,11 @@ form input:not(input[type="submit"]), form select {
     margin-bottom: 2rem;
     padding: 1rem;
     outline: none;
-}
+}/* 
 form {
     display: flex;
     flex-direction: column;
-}
+} */
 .form input:invalid {
     border: #ff0000;
 }
